app/css/app.css
/* app css stylesheet */

body {
  padding-top: 20px;
}


.game-images {
  background-color: white;
  width: 450px;
  height: 450px;
  overflow: hidden;
  position: relative;
  float: left;
}

.games {
  list-style: none;
}

.thumb {
  float: left;
  margin: -0.5em 1em 1.5em 0;
  padding-bottom: 1em;
  height: 100px;
  width: 100px;
}

.games li {
  display: inline-block;
  clear: both;
  height: 230px;
  width: 230px;
  padding-top: 15px;
}

/** Detail View **/
img.game {
  float: left;
  margin-right: 3em;
  margin-bottom: 2em;
  background-color: white;
  padding: 2em;
  height: 400px;
  width: 400px;
  display: none;
}

img.game:first-child {
  display: block;
}


ul.game-thumbs {
  margin: 0;
  list-style: none;
}

ul.game-thumbs li {
  border: 1px solid black;
  display: inline-block;
  margin: 1em;
  background-color: white;
}

ul.game-thumbs img {
  height: 100px;
  width: 100px;
  padding: 1em;
}

ul.game-thumbs img:hover {
  cursor: pointer;
}


ul.specs {
  clear: both;
  margin: 0;
  padding: 0;
  list-style: none;
}

ul.specs > li{
  display: inline-block;
  width: 200px;
  vertical-align: top;
}

ul.specs > li > span{
  font-weight: bold;
  font-size: 1.2em;
}

ul.specs dt {
  font-weight: bold;
}

h1 {
  border-bottom: 1px solid gray;
}

